# ONNX2RDF

./: .gitignore  .zenodo.json  CITATION.cff  README.md  TODO.md  URI_DOCS.md  codemeta.json  dockerfile  pyproject.toml  requirments.txt  setup.py
ONNX2RDF/: clean_model.py  json_util.py  parser.py  warnings_thread_safe.py
ONNX2RDF/mappings/: mapper_yarr.yaml
ONNX2RDF/ontology/: onnx_ontology.drawio.xml  ontology.ttl
ONNX2RDF/pre_process_module/: pre_process.py
ONNX2RDF/pre_process_module/repair_functions/: check_functions.py  repair_opsets.py
ONNX2RDF/pre_process_module/repair_nodes/: node_connections.py  repair_nodes_base.py
ONNX2RDF/pre_process_module/repair_types/: reapair_value_info.py  repair_annotation.py  repair_attributes.py  repair_dims.py  repair_initializer.py  repair_metadata_prop.py  repair_tensor.py  repair_type_proto.py
ONNX2RDF/pre_process_module/util_process/: __init__.py  data.py  operators.py  util.py
ontology/: ontology.ttl
